# Nokia

./: .gitignore  README.md
messenger/: CMakeLists.txt
messenger/src/: CMakeLists.txt  chat_client.cpp  chat_message.hpp
messenger/tst/: CMakeLists.txt  messenger_test.cpp
shared_ptr/: My_shared_ptr.hpp
